@@ -580,8 +580,9 @@
     (if show-window-p
 	(when (or *show-root-frame-p* (not (child-equal-p frame *current-root*)))
 	  (map-window window)
-	  (when raise-p (raise-window window))
-	  (display-frame-info frame))
+	  (when raise-p
+	    (raise-window window)
+	    (display-frame-info frame)))
 	(hide-window window))))
 
 
@@ -595,12 +596,13 @@
 
 
 (defmethod show-child ((window xlib:window) parent raise-p)
-  (if (or (managed-window-p window parent)
-	  (not (hide-unmanager-window-p parent))
-	  (child-equal-p parent *current-child*))
+  (if (and raise-p
+	   (or (managed-window-p window parent)
+	       (not (hide-unmanager-window-p parent))
+	       (child-equal-p parent *current-child*)))
       (progn
 	(map-window window)
-	(when raise-p (raise-window window)))
+	(raise-window window))
       (hide-window window)))
 
 (defmethod show-child (child parent raise-p)
