@@ -1,5 +1,8 @@
 2010-10-23  Philippe Brochard  <pbrochard@common-lisp.net>
 
+	* src/clfswm-internal.lisp (show-child): Show window only if not
+	hidden.
+
 	* src/clfswm-keys.lisp (binding-substitute-modifier): Utility to
 	change modifiers after binding definition.
 
